fix rtl styles on mobile

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -40,7 +40,7 @@ header>div:first-child>.action {
 header>div {
   display: flex;
   width: 100%;
-  padding: 0.5em 0.5em 0.5em 1em;
+  padding: 0.5em 0.5em 0.5em 0.5em;
   align-items: center;
 }
 
